Assignment1/Antlr/MPParser.java
// Generated from MP.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MPParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		BOOLEAN=1, BREAK=2, CONTINUE=3, ELSE=4, FOR=5, REAL=6, IF=7, INTEGER=8, 
		RETURN=9, VOIDTYPE=10, DO=11, WHILE=12, MAIN=13, STRING=14, WITH=15, TO=16, 
		DOWNTO=17, THEN=18, BEGIN=19, END=20, FUNCTION=21, PROCEDURE=22, VAR=23, 
		ARRAY=24, OF=25, ID=26, TRADBLOCK=27, BLOCK=28, LINE=29, ASSIOP=30, ADDOP=31, 
		SUBOP=32, MULOP=33, DIVOP=34, DIVINOP=35, MODOP=36, EQUOP=37, GTOP=38, 
		GTEOP=39, LTOP=40, LTEOP=41, ANDOP=42, OROP=43, NEOP=44, NOTOP=45, COMMA=46, 
		DOUDOT=47, COLON=48, SEMI=49, LSB=50, RSB=51, LB=52, RB=53, LP=54, RP=55, 
		INTLIT=56, REALLIT=57, BOOLLIT=58, WS=59, ERROR_CHAR=60, STRINGLIT=61, 
		ILLEGAL_ESCAPE=62, UNCLOSE_STRING=63;
	public static final int
		RULE_program = 0, RULE_manydec = 1, RULE_onedec = 2, RULE_vardec = 3, 
		RULE_varlist = 4, RULE_vartypelist = 5, RULE_vartype = 6, RULE_paramarr = 7, 
		RULE_vartypebasic = 8, RULE_funcdec = 9, RULE_paramlist = 10, RULE_paramsingle = 11, 
		RULE_returntype = 12, RULE_stmt = 13, RULE_assignstmt = 14, RULE_assignlist = 15, 
		RULE_arrayvar = 16, RULE_funcstmt = 17, RULE_ifstmt = 18, RULE_ifexp = 19, 
		RULE_ifbody = 20, RULE_whilestmt = 21, RULE_whileexp = 22, RULE_whilebody = 23, 
		RULE_forstmt = 24, RULE_forbody = 25, RULE_breakstmt = 26, RULE_continuestmt = 27, 
		RULE_compoundstmt = 28, RULE_returnstmt = 29, RULE_returnbody = 30, RULE_withstmt = 31, 
		RULE_funcall = 32, RULE_calllist = 33, RULE_procdec = 34, RULE_procmain = 35, 
		RULE_procbasic = 36, RULE_expstmt = 37, RULE_exp = 38, RULE_expr = 39, 
		RULE_exp1 = 40, RULE_exp2 = 41, RULE_exp3 = 42, RULE_exp4 = 43, RULE_exp5 = 44, 
		RULE_exp6 = 45, RULE_literals = 46;
	public static final String[] ruleNames = {
		"program", "manydec", "onedec", "vardec", "varlist", "vartypelist", "vartype", 
		"paramarr", "vartypebasic", "funcdec", "paramlist", "paramsingle", "returntype", 
		"stmt", "assignstmt", "assignlist", "arrayvar", "funcstmt", "ifstmt", 
		"ifexp", "ifbody", "whilestmt", "whileexp", "whilebody", "forstmt", "forbody", 
		"breakstmt", "continuestmt", "compoundstmt", "returnstmt", "returnbody", 
		"withstmt", "funcall", "calllist", "procdec", "procmain", "procbasic", 
		"expstmt", "exp", "expr", "exp1", "exp2", "exp3", "exp4", "exp5", "exp6", 
		"literals"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, "'+'", "'-'", "'*'", "'/'", 
		null, null, "'='", "'>'", "'>='", "'<'", "'<='", null, null, "'<>'", null, 
		"','", "'..'", "':'", "';'", "'['", "']'", "'('", "')'", "'{'", "'}'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "BOOLEAN", "BREAK", "CONTINUE", "ELSE", "FOR", "REAL", "IF", "INTEGER", 
		"RETURN", "VOIDTYPE", "DO", "WHILE", "MAIN", "STRING", "WITH", "TO", "DOWNTO", 
		"THEN", "BEGIN", "END", "FUNCTION", "PROCEDURE", "VAR", "ARRAY", "OF", 
		"ID", "TRADBLOCK", "BLOCK", "LINE", "ASSIOP", "ADDOP", "SUBOP", "MULOP", 
		"DIVOP", "DIVINOP", "MODOP", "EQUOP", "GTOP", "GTEOP", "LTOP", "LTEOP", 
		"ANDOP", "OROP", "NEOP", "NOTOP", "COMMA", "DOUDOT", "COLON", "SEMI", 
		"LSB", "RSB", "LB", "RB", "LP", "RP", "INTLIT", "REALLIT", "BOOLLIT", 
		"WS", "ERROR_CHAR", "STRINGLIT", "ILLEGAL_ESCAPE", "UNCLOSE_STRING"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MP.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MPParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public ManydecContext manydec() {
			return getRuleContext(ManydecContext.class,0);
		}
		public TerminalNode EOF() { return getToken(MPParser.EOF, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MPListener ) ((MPListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MPListener ) ((MPListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			manydec();
			setState(95);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ManydecContext extends ParserRuleContext {
		public List<OnedecContext> onedec() {
			return getRuleContexts(OnedecContext.class);
		}
		public OnedecContext onedec(int i) {
			return getRuleContext(OnedecContext.class,i);
		}
		public ManydecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_manydec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MPListener ) ((MPListener)listener).enterManydec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MPListener ) ((MPListener)listener).exitManydec(this);
		}
	}

	public final ManydecContext manydec() throws RecognitionException {
		ManydecContext _localctx = new ManydecContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_manydec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << FUNCTION) | (1L << PROCEDURE) | (1L << VAR))) != 0)) {
				{
				{
				setState(97);
				onedec();
				}
				}
				setState(102);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OnedecContext extends ParserRuleContext {
		public VardecContext vardec() {
			return getRuleContext(VardecContext.class,0);
		}
		public FuncdecContext funcdec() {
			return getRuleContext(FuncdecContext.class,0);
		}
		public ProcdecContext procdec() {
			return getRuleContext(ProcdecContext.class,0);
		}
		public OnedecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_onedec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MPListener ) ((MPListener)listener).enterOnedec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MPListener ) ((MPListener)listener).exitOnedec(this);
		}
	}

	public final OnedecContext onedec() throws RecognitionException {
		OnedecContext _localctx = new OnedecContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_onedec);
		try {
			setState(106);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VAR:
				enterOuterAlt(_localctx, 1);
				{
				setState(103);
				vardec();
				}
				break;
			case FUNCTION:
				enterOuterAlt(_localctx, 2);
				{
				setState(104);
				funcdec();
				}
				break;
			case PROCEDURE:
				enterOuterAlt(_localctx, 3);
				{
				setState(105);
				procdec();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VardecContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(MPParser.VAR, 0); }
		public List<VarlistContext> varlist() {
			return getRuleContexts(VarlistContext.class);
		}
		public VarlistContext varlist(int i) {
			return getRuleContext(VarlistContext.class,i);
		}
		public VardecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vardec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MPListener ) ((MPListener)listener).enterVardec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MPListener ) ((MPListener)listener).exitVardec(this);
		}
	}

	public final VardecContext vardec() throws RecognitionException {
		VardecContext _localctx = new VardecContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_vardec);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(VAR);
			setState(110); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(109);
					varlist();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(112); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarlistContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(MPParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(MPParser.ID, i);
		}
		public VartypelistContext vartypelist() {
			return getRuleContext(VartypelistContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(MPParser.SEMI, 0); }
		public List<TerminalNode> COMMA() { return getTokens(MPParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(MPParser.COMMA, i);
		}
		public VarlistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varlist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MPListener ) ((MPListener)listener).enterVarlist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MPListener ) ((MPListener)listener).exitVarlist(this);
		}
	}

	public final VarlistContext varlist() throws RecognitionException {
		VarlistContext _localctx = new VarlistContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_varlist);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(ID);
			setState(119);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(115);
				match(COMMA);
				setState(116);
				match(ID);
				}
				}
				setState(121);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(122);
			vartypelist();
			setState(123);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VartypelistContext extends ParserRuleContext {
		public TerminalNode COLON() { return getToken(MPParser.COLON, 0); }
		public VartypeContext vartype() {
			return getRuleContext(VartypeContext.class,0);
		}
		public VartypelistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vartypelist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MPListener ) ((MPListener)listener).enterVartypelist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MPListener ) ((MPListener)listener).exitVartypelist(this);
		}
	}

	public final VartypelistContext vartypelist() throws RecognitionException {
		VartypelistContext _localctx = new VartypelistContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_vartypelist);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(COLON);
			setState(126);
			vartype();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VartypeContext extends ParserRuleContext {
		public VartypebasicContext vartypebasic() {
			return getRuleContext(VartypebasicContext.class,0);
		}
		public TerminalNode ARRAY() { return getToken(MPParser.ARRAY, 0); }
		public ParamarrContext paramarr() {
			return getRuleContext(ParamarrContext.class,0);
		}
		public TerminalNode OF() { return getToken(MPParser.OF, 0); }
		public VartypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vartype; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MPListener ) ((MPListener)listener).enterVartype(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MPListener ) ((MPListener)listener).exitVartype(this);
		}
	}

	public final VartypeContext vartype() throws RecognitionException {
		VartypeContext _localctx = new VartypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_vartype);
		try {
			setState(134);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BOOLEAN:
			case REAL:
			case INTEGER:
			case STRING:
				enterOuterAlt(_localctx, 1);
				{
				setState(128);
				vartypebasic();
				}
				break;
			case ARRAY:
				enterOuterAlt(_localctx, 2);
				{
				setState(129);
				match(ARRAY);
				setState(130);
				paramarr();
				setState(131);
				match(OF);
				setState(132);
				vartypebasic();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamarrContext extends ParserRuleContext {
		public TerminalNode LSB() { return getToken(MPParser.LSB, 0); }
		public List<TerminalNode> INTLIT() { return getTokens(MPParser.INTLIT); }
		public TerminalNode INTLIT(int i) {
			return getToken(MPParser.INTLIT, i);
		}
		public TerminalNode DOUDOT() { return getToken(MPParser.DOUDOT, 0); }
		public TerminalNode RSB() { return getToken(MPParser.RSB, 0); }
		public ParamarrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramarr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MPListener ) ((MPListener)listener).enterParamarr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MPListener ) ((MPListener)listener).exitParamarr(this);
		}
	}

	public final ParamarrContext paramarr() throws RecognitionException {
		ParamarrContext _localctx = new ParamarrContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_paramarr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			match(LSB);
			setState(137);
			match(INTLIT);
			setState(138);
			match(DOUDOT);
			setState(139);
			match(INTLIT);
			setState(140);
			match(RSB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VartypebasicContext extends ParserRuleContext {
		public TerminalNode INTEGER() { return getToken(MPParser.INTEGER, 0); }
		public TerminalNode STRING() { return getToken(MPParser.STRING, 0); }
		public TerminalNode REAL() { return getToken(MPParser.REAL, 0); }
		public TerminalNode BOOLEAN() { return getToken(MPParser.BOOLEAN, 0); }
		public VartypebasicContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vartypebasic; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MPListener ) ((MPListener)listener).enterVartypebasic(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MPListener ) ((MPListener)listener).exitVartypebasic(this);
		}
	}

	public final VartypebasicContext vartypebasic() throws RecognitionException {
		VartypebasicContext _localctx = new VartypebasicContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_vartypebasic);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOLEAN) | (1L << REAL) | (1L << INTEGER) | (1L << STRING))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncdecContext extends ParserRuleContext {
		public TerminalNode FUNCTION() { return getToken(MPParser.FUNCTION, 0); }
		public TerminalNode ID() { return getToken(MPParser.ID, 0); }
		public TerminalNode LB() { return getToken(MPParser.LB, 0); }
		public TerminalNode RB() { return getToken(MPParser.RB, 0); }
		public TerminalNode COLON() { return getToken(MPParser.COLON, 0); }
		public ReturntypeContext returntype() {
			return getRuleContext(ReturntypeContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(MPParser.SEMI, 0); }
		public ParamlistContext paramlist() {
			return getRuleContext(ParamlistContext.class,0);
		}
		public List<VardecContext> vardec() {
			return getRuleContexts(VardecContext.class);
		}
		public VardecContext vardec(int i) {
			return getRuleContext(VardecContext.class,i);
		}
		public CompoundstmtContext compoundstmt() {
			return getRuleContext(CompoundstmtContext.class,0);
		}
		public FuncdecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcdec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MPListener ) ((MPListener)listener).enterFuncdec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MPListener ) ((MPListener)listener).exitFuncdec(this);
		}
	}

	public final FuncdecContext funcdec() throws RecognitionException {
		FuncdecContext _localctx = new FuncdecContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_funcdec);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			match(FUNCTION);
			setState(145);
			match(ID);
			setState(146);
			match(LB);
			setState(148);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(147);
				paramlist();
				}
			}

			setState(150);
			match(RB);
			setState(151);
			match(COLON);
			setState(152);
			returntype();
			setState(153);
			match(SEMI);
			setState(157);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(154);
					vardec();
					}
					} 
				}
				setState(159);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			setState(161);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==BEGIN) {
				{
				setState(160);
				compoundstmt();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamlistContext extends ParserRuleContext {
		public List<ParamsingleContext> paramsingle() {
			return getRuleContexts(ParamsingleContext.class);
		}
		public ParamsingleContext paramsingle(int i) {
			return getRuleContext(ParamsingleContext.class,i);
		}
		public List<TerminalNode> SEMI() { return getTokens(MPParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(MPParser.SEMI, i);
		}
		public ParamlistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramlist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MPListener ) ((MPListener)listener).enterParamlist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MPListener ) ((MPListener)listener).exitParamlist(this);
		}
	}

	public final ParamlistContext paramlist() throws RecognitionException {
		ParamlistContext _localctx = new ParamlistContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_paramlist);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(172);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(164); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(163);
						paramsingle();
						}
						}
						setState(166); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==ID );
					setState(168);
					match(SEMI);
					}
					} 
				}
				setState(174);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			}
			setState(175);
			paramsingle();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamsingleContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(MPParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(MPParser.ID, i);
		}
		public TerminalNode COLON() { return getToken(MPParser.COLON, 0); }
		public VartypeContext vartype() {
			return getRuleContext(VartypeContext.class,0);
		}
		public List<TerminalNode> COMMA() { return getTokens(MPParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(MPParser.COMMA, i);
		}
		public ParamsingleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramsingle; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MPListener ) ((MPListener)listener).enterParamsingle(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MPListener ) ((MPListener)listener).exitParamsingle(this);
		}
	}
